[project]
name = "webserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "gunicorn>=25.3.0",
    "matplotlib>=3.10.8",
    "numba>=0.64.0",
    "numpy>=2.4.3",
    "sympy>=1.14.0",
    "uvicorn>=0.41.0",
]
